--- a/wwr/styles/style.css
+++ b/wwr/styles/style.css
@@ -1,3 +1,5 @@
+@import url('https://fonts.googleapis.com/css2?family=Quicksand&family=Raleway:wght@300&display=swap');
+
 content {
     max-width: 1600px;
     margin: 0 auto;
@@ -5,9 +7,9 @@ content {
 
 nav a, #hero-msg, h1, #hero-msg, h4, .button-box, main section {
     text-align: center;
-    color: #E6E6E6
-    ;
+    color: #E6E6E6;
     text-decoration: none;
+    padding: 35px;
 }
 
 #background {
@@ -15,11 +17,16 @@ nav a, #hero-msg, h1, #hero-msg, h4, .button-box, main section {
 }
 h2 {
     color: #3BA5A5;
+    margin: 0;
 }
 
 body {
     background-color: #E6E6E6;
     color: #3BA5A5;
+    font-family: Quicksand, Helvetica, sans-serif;
+    font-size: 22px;
+    margin: 0;
+    padding: 0;
 }
 header {
     background-color: #3BA5A5;
@@ -33,6 +40,11 @@ nav a:hover {
     background-color: #3BA5A5;
     color: #E6E6E6;
     text-decoration: none;
+    font-family: Raleway, Helvetica, sans-serif;
+    font-size: 18px;
+    padding: 15px 30px;
+    margin-top: 50px;
+    border-radius: 5px;
 }
 .book:hover, .join:hover {
     background-color: #3BA5A5;
@@ -41,13 +53,20 @@ nav a:hover {
 .msg {
     background-color: #3BA5A5;
     color: #E6E6E6;
+    line-height: 1.5em;
+    padding: 35px;
 }
 footer {
     background-color: #3BA5A5;
     color: #E6E6E6;
+    padding: 25px 50px;
+    margin-top: 200px;
 }
 .home-title {
     color: #FF621F;	
+    font-family: Raleway, Helvetica, sans-serif;
+    font-size: 2em;
+    margin-top: 10px;
 }
 h4 {
     color: #FF621F;
@@ -57,6 +76,9 @@ h4 {
 }
 .msg p {
     color: #E6E6E6;
+    font-family: Raleway, Helvetica, sans-serif;
+    font-size: .8em;
+    padding-bottom: 15px;
 }
 footer a {
     color: #E6E6E6;
@@ -70,6 +92,7 @@ footer a:hover {
 }
 .icon {
     width: 80px;
+    padding-top: 10px;
 }
 #hero-img {
     width: 100%;
@@ -80,3 +103,19 @@ footer p {
 footer p a:hover {
     text-decoration: underline;
 }
+footer .social img {
+    padding-top:15px;
+}
+#logo_link {
+    padding-top: 5px;
+}
+.rivers-card, .camping-card, .rapids-card {
+    margin: 200px 0;
+}
+,card-img {
+    border: 10px solid #d9c2a3;
+}
+main section img {
+    box-sizing: border-box;
+}
+    
