--- a/wwr/styles/style.css
+++ b/wwr/styles/style.css
@@ -112,7 +112,7 @@ footer .social img {
 .rivers-card, .camping-card, .rapids-card {
     margin: 200px 0;
 }
-,card-img {
+.card-img {
     border: 10px solid #d9c2a3;
 }
 main section img {
