--- a/wwr/styles/style.css
+++ b/wwr/styles/style.css
@@ -113,7 +113,7 @@ footer .social img {
     margin: 200px 0;
 }
 .card-img {
-    border: 10px solid #black;
+    border: 10px solid #d9c2a3;
 }
 main section img {
     box-sizing: border-box;
