--- a/wwr/styles/style.css
+++ b/wwr/styles/style.css
@@ -52,7 +52,7 @@ nav a:hover {
 }
 .msg {
     background-color: #3BA5A5;
-    color: #E6E6E6;
+    color: #3BA5A5;
     line-height: 1.5em;
     padding: 35px;
 }
