--- a/wwr/styles/style.css
+++ b/wwr/styles/style.css
@@ -9,8 +9,11 @@ nav a, #hero-msg, h1, #hero-msg, h4, .button-box, main section {
     text-align: center;
     color: #E6E6E6;
     text-decoration: none;
-    padding: 35px;
 }
+
+nav a {
+    padding: 35px;
+)
 
 #background {
     height: 725px;
@@ -112,6 +115,7 @@ footer .social img {
 .rivers-card, .camping-card, .rapids-card {
     margin: 200px 0;
 }
+
 .card-img {
     border: 10px solid #d9c2a3;
 }
