--- a/wwr/styles/style.css
+++ b/wwr/styles/style.css
@@ -13,7 +13,7 @@ nav a, #hero-msg, h1, #hero-msg, h4, .button-box, main section {
 
 nav a {
     padding: 35px;
-)
+}
 
 #background {
     height: 725px;
