--- a/wwr/styles/style.css
+++ b/wwr/styles/style.css
@@ -11,9 +11,9 @@ nav a, #hero-msg, h1, #hero-msg, h4, .button-box, main section {
     text-decoration: none;
 }
 
-nav a {
+/* nav a {
     padding: 35px;
-}
+} */
 
 #background {
     height: 725px;
