--- a/positionstyles.css
+++ b/positionstyles.css
@@ -162,37 +162,40 @@
 /* Activity 6 styles */ 
 .content6 {
   /* This is the parent of the activity 6 boxes. */
+  display: grid;
+    grid-template-columns: 100px 100px 100px 100px 100px 100px;
 }
 .red6 {
-  width: 325px; 
-  height: 150px; 
-  background-color: red; 
-  z-index: 0;
+  width: 400px;
+  height: 200px;
+  background-color: red;
+  grid-column: 1/5;
+  grid-row: 1/3;
 } 
 .blue6 {
-  width: 300px; 
-  height: 300px; 
-  background-color: blue; 
-  align-content: center;
-  z-index: 1;
-  margin: -75px 100px;
+  width: 400px;
+  height: 400px;
+  background-color: blue;
+  grid-column: 2/6;
+  grid-row: 2/6;
   
 } 
 .green6 {
-  width: 175px; 
-  height: 175px; 
-  background-color: green; 
-  float: left;
-  z-index: 2;
-  margin: 125px 0px;
+  width: 200px;
+  height: 200px;
+  background-color: green;
+  grid-column: 1/3;
+  grid-row: 5/7;
+  z-index: 1;
  
 } 
 .yellow6 {
-  width: 175px; 
-  height: 300px; 
-  background-color: gold; 
-  float: right;
-  z-index: 2;
+  width: 200px;
+  height: 400px;
+  background-color: gold;
+  grid-row: 3/7;
+  grid-column: 5/7;
+  z-index: 1;
 
 } 
 
