--- a/wwr/styles/style.css
+++ b/wwr/styles/style.css
@@ -163,7 +163,7 @@ nav {
     margin-top: 100px;
 }
 
-#home-grid {
+.home-grid {
     display: grid;
     grid-template-columns: 1fr 1fr 1fr 1fr 1fr 1fr 1fr 1fr 1fr 1fr;
 
