--- a/snailmail/styles/style.css
+++ b/snailmail/styles/style.css
@@ -1,7 +1,228 @@
 /* Font Import */
 @import url('https://fonts.googleapis.com/css2?family=Fredoka+One&family=Poppins:wght@200&display=swap');
 
-content {
-    max-width: 1600px;
-    margin: 0 auto;
+#content {
+max-width: 1600px;
+margin: 0 auto;
+}
+
+body {
+color: white;
+font-family: Poppins, Helvetica, sans-serif;
+background-color: #1b3b19;
+
+}
+header {
+color: white;
+background-color: #4A7856;
+font-family: Fredoka One, Helvetica, sans-serif;
+display: grid;
+grid-template-columns: 150px auto;
+height: 200px;
+}
+.logo {
+width: 140px;
+}
+.logotitle {
+font-size: 100px;
+margin: 0;
+margin-top: 25px;
+}
+nav {
+display: flex;
+margin-left: 20px;
+justify-content: space-around;
+font-size: 20px;
+width: 1500px;
+height: 120px;
+}
+nav a {
+width: 300px;
+text-decoration: none;
+color: white;
+text-align: center;
+margin-right: 100px;
+
+
+}
+nav a:hover {
+color: #94ECBE;
+background-color: #345830;
+height: 35px;
+border-radius: 20px;
+width: 300px;
+}
+
+main section {
+text-align: center;
+
+}
+#logo_link {
+padding-top: 5px;
+justify-self: center;
+align-self: center;
+}
+.home-grid {
+display: grid;
+grid-template-columns: 1fr 3fr;
+grid-template-rows: 400px 300px 300px;
+height: 1000px;
+margin: 20px;
+padding: 20px;
+}
+
+.intro-pic, .matterpic, .enviropic {
+width: 100%;
+}
+.intro-card img {
+grid-column: 1/2;
+grid-row: 1/2;
+border-radius: 40px 0px 0px 40px;
+}
+.text-intro {
+grid-row: 1/2;
+grid-column: 2/3;
+padding-top: 10px;
+padding-left: 20px;
+padding-right: 20px;
+margin-bottom: 78.5px;
+text-align: center;
+background-color: #4A7856;
+border-radius: 0px 40px 40px 0px;
+}
+.text-intro h1 {
+    font-family: Fredoka One, Helvetica, sans-serif;
+}
+.matterpic {
+grid-column: 1/2;
+grid-row: 2/3;
+border-radius: 40px 0px 0px 40px;
+
+}
+.text-snail {
+grid-column: 2/3;
+grid-row: 2/3;
+background-color: #4A7856;
+border-radius: 0px 40px 40px 0px;
+padding-top: 50px;
+text-align: center;
+font-size: 2em;
+margin-bottom: 58.5px;
+font-family: Fredoka One, Helvetica, sans-serif;
+
+}
+
+.text-environmental {
+grid-column: 2/3;
+grid-row: 3/4;
+background-color: #4A7856;
+border-radius: 0px 40px 40px 0px;
+text-align: center;
+font-size: 2em;
+margin-bottom: 88px;
+padding-top: 35px;
+font-family: Fredoka One, Helvetica, sans-serif;
+text-decoration: none;
+}
+
+.environmental img {
+grid-column: 1/2;
+grid-row: 3/4;
+border-radius: 40px 0px 0px 40px;
+text-decoration: none;
+}
+.environmental h2 {
+grid-row: 3/4;
+grid-column: 3/4;
+text-decoration: none;
+}
+
+.text-environmental h2 {
+    text-decoration: none;
+}
+
+footer {
+background-color: #4A7856;
+color: white;
+display: flex;
+justify-content: space-around;
+}
+footer a {
+color: white;
+text-decoration: none;
+}
+footer a:hover {
+color: #1b3b19;
+}
+footer p {
+font-size: 1.2em;
+}
+footer .social img {
+padding-top: 15px;
+}
+
+
+/* Why do snails matter Page */
+
+.matter-grid {
+    display: grid;
+grid-template-columns: 1fr 3fr;
+
+height: 1000px;
+margin: 20px;
+padding: 20px;
+}
+
+.snailmatterpic {
+    width: 100%;
+    border-radius: 40px 0px 0px 40px;
+    height: 50%;
+}
+
+.text-whymatter {
+    background-color: #4A7856;
+    padding-left: 20px;
+    padding-right: 20px;
+    margin-bottom: auto;
+    text-align: center;
+    border-radius: 0px 40px 40px 0px;
+    padding-bottom: 30px;
+}
+.text-whymatter h1 {
+    font-family: Fredoka One, helvetica, sans-serif;
+}
+
+.matter-card, .text-whymatter {
+    margin-top: 50px;
+}
+
+/* Environmental Stewardship Page */
+
+.enviro-grid {
+    display: grid;
+grid-template-columns: 1fr 3fr;
+
+height: 1000px;
+margin: 20px;
+padding: 20px;
+}
+.oceanpic {
+    width: 100%;
+    height: 47.5%;
+    border-radius: 40px 0px 0px 40px;
+}
+.text-steward {
+    background-color: #4A7856;
+    padding-left: 30px;
+    padding-right: 30px;
+    margin-bottom: auto;
+    padding-bottom: 30px;
+    text-align: center;
+    border-radius: 0px 40px 40px 0px;
+}
+.text-steward h1 {
+    font-family: Fredoka One, Helvetica, sans-serif;
+}
+.enviro-card, .text-steward {
+    margin-top: 50px;
 }
