--- a/snailmail/styles/style.css
+++ b/snailmail/styles/style.css
@@ -176,7 +176,7 @@ padding: 20px;
 .snailmatterpic {
     width: 100%;
     border-radius: 40px 0px 0px 40px;
-    height: 50%;
+    height: 475px;
 }
 
 .text-whymatter {
@@ -208,7 +208,7 @@ padding: 20px;
 }
 .oceanpic {
     width: 100%;
-    height: 47.5%;
+    height: 451px;
     border-radius: 40px 0px 0px 40px;
 }
 .text-steward {
